# Robot-Framework

./: .gitignore  .pabotsuitenames  README.md  package-lock.json  pyproject.toml
libraries/readers/: ConfigReader.py  csvReader.py  excelReader.py
output/: log.html  output.xml  playwright-log.txt  report.html
output/allure/: 04ffb68e-ee0e-439a-9b5a-86da17cc1902-container.json  0c133a71-658d-4da1-b6f5-c270c494acbc-result.json  17845cac-33ea-4041-87d5-fcc66bc17e41-attachment.html  222fee58-606d-4c5d-8e16-82f2421e87d7-attachment.html  31137dab-5065-45cf-97ad-7ace160da126-attachment.html  50d30dd7-f68a-4098-8812-043b58144c47-attachment.html  9f2191f1-0d7a-47a0-b6ed-e8aec6763c59-attachment.html  a44c1345-6803-45ec-806d-5b223020cdb0-attachment.html  bc775874-3739-46fc-af80-56e8896e2ac5-attachment.html  d63bebe6-c1b0-4645-9551-50fea951eb29-attachment.html  df1a584d-9649-4ca5-8a6c-b149ac6c7646-result.json  e1cc4829-acf3-43a9-a802-1c1f4175f6ab-attachment.html
resources/api/: usersEndpoints.robot
resources/ui/: homePage.robot  login.robot  loginPage.robot
testData/staging/: users-excel.xlsx  users.json
testData/test/: users-csv.csv
tests/api/: usersTest.robot  usersTestFromEndpoints.robot
tests/ui/: dataDriven.robot  firstTest.robot  loginTest.robot  loginTestWithPOM.robot  testWithKeywords.robot
utils/: commonKeywords.robot  dbActions.robot  mobileTestBase.robot  testBase.robot
variables/: config.ini  credentials.py  endpoints.py  paths.py
variables/staging/: URLs.py
variables/test/: URLs.py
