[tool.poetry]
name = "robot-framework"
version = "0.1.0"
description = ""
authors = ["M_Bakry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.2.0"
robotframework-browser = "^18.2.0"
robotframework-databaselibrary = "^1.4.3"
robotframework-jsonlibrary = "^0.5"
robotframework-requests = "^0.9.6"
robotframework-reportportal = "^5.5.1"
robotframework-appiumlibrary = "^2.0.0"
robotframework-pabot = "^2.18.0"
pymssql = "^2.2.11"
allure-robotframework = "^2.13.2"
configparser = "^6.0.1"
robotframework-datadriver = {extras = ["xls"], version = "^1.11.0"}
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
